--- a/gwt-integration/pom.xml
+++ b/gwt-integration/pom.xml
@@ -22,5 +22,20 @@
 	<modules>
 		<module>gwt-integration-jpa</module>
 		<module>gwt-integration-web</module>
+		<module>gwt-integration-service</module>
+		<module>gwt-integration-spring-data-jpa</module>
 	</modules>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
