--- a/gwt-integration/gwt-integration-web/pom.xml
+++ b/gwt-integration/gwt-integration-web/pom.xml
@@ -31,7 +31,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
+			<artifactId>hibernate-core</artifactId>
 			<version>4.1.9.Final</version>
 		</dependency>
 		<dependency>
