--- a/gwt-integration/gwt-integration-web/pom.xml
+++ b/gwt-integration/gwt-integration-web/pom.xml
@@ -24,25 +24,16 @@
 			<artifactId>gwt-servlet</artifactId>
 			<version>2.5.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.github.apetrelli.gwtintegration</groupId>
-			<artifactId>gwt-integration-jpa</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20090211</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
