--- a/gwt-integration/gwt-integration-spring-context/pom.xml
+++ b/gwt-integration/gwt-integration-spring-context/pom.xml
@@ -20,5 +20,10 @@
 			<artifactId>gwt-integration-requestfactory</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
 	</dependencies>
 </project>
