Created gwt-integration-editor module.

--- a/gwt-integration/pom.xml
+++ b/gwt-integration/pom.xml
@@ -35,6 +35,7 @@
 		<module>gwt-integration-spring-web</module>
 		<module>gwt-integration-locale</module>
 		<module>gwt-integration-remote-logging</module>
+		<module>gwt-integration-editor</module>
 	</modules>
 	<build>
 		<plugins>
