--- a/gwt-integration/gwt-integration-requestfactory/pom.xml
+++ b/gwt-integration/gwt-integration-requestfactory/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>gwt-servlet</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
