--- a/gwt-integration-spring-web/pom.xml
+++ b/gwt-integration-spring-web/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-alpha2</version>
 	</parent>
 	<artifactId>gwt-integration-spring-web</artifactId>
 	<name>GWT Integration - Spring Web</name>
@@ -24,12 +23,12 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-spring-context</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-locale</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-alpha2</version>
 		</dependency>
 	</dependencies>
 </project>
