--- a/gwt-integration-web/pom.xml
+++ b/gwt-integration-web/pom.xml
@@ -1,12 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>gwt-integration-web</artifactId>
 	<name>GWT Integration - Web</name>
 	<description>Code for servlet-based environments to make GWT work correctly.</description>
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-alpha2</version>
 		<artifactId>gwt-integration</artifactId>
 	</parent>
 	<properties>
