--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.apetrelli.gwtintegration</groupId>
 	<artifactId>gwt-integration</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-alpha2</version>
 	<packaging>pom</packaging>
 	<name>GWT integration</name>
 	<description>Integration of GWT with other technologies and integration of missing parts.</description>
@@ -23,7 +22,7 @@
 		<url>scm:git:https://github.com/apetrelli/gwt-integration</url>
 		<connection>scm:git:git://github.com/apetrelli/gwt-integration.git</connection>
 		<developerConnection>scm:git:https://github.com/apetrelli/gwt-integration.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>gwt-integration-1.0.0-alpha2</tag>
 	</scm>
 	<modules>
 		<module>gwt-integration-jpa</module>
