--- a/gwt-integration-jpa/pom.xml
+++ b/gwt-integration-jpa/pom.xml
@@ -5,7 +5,7 @@
 	<description>SampleGWT runtime for the model part</description>
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
-		<version>1.0.0-alpha2</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<artifactId>gwt-integration</artifactId>
 	</parent>
 	<properties>
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-deletable</artifactId>
-			<version>1.0.0-alpha2</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
