--- a/gwt-integration-spring-web/pom.xml
+++ b/gwt-integration-spring-web/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-alpha2</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>gwt-integration-spring-web</artifactId>
 	<name>GWT Integration - Spring Web</name>
@@ -23,12 +23,12 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-spring-context</artifactId>
-			<version>1.0.0-alpha2</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-locale</artifactId>
-			<version>1.0.0-alpha2</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
