--- a/gwt-integration-web/pom.xml
+++ b/gwt-integration-web/pom.xml
@@ -5,7 +5,7 @@
 	<description>Code for servlet-based environments to make GWT work correctly.</description>
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
-		<version>1.0.0-alpha2</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<artifactId>gwt-integration</artifactId>
 	</parent>
 	<properties>
