--- a/gwt-integration-spring-context/pom.xml
+++ b/gwt-integration-spring-context/pom.xml
@@ -15,14 +15,29 @@
 			<version>3.2.1.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.apetrelli.gwtintegration</groupId>
-			<artifactId>gwt-integration-requestfactory</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-servlet</artifactId>
+			<version>2.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0.GA</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.apetrelli.gwtintegration</groupId>
+			<artifactId>gwt-integration-locale</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
