Upgraded to gwt 2.5.1 Fixed some editor problems.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		<artifactId>apetrelli-master</artifactId>
 		<version>1-alpha3</version>
 	</parent>
+	<properties>
+		<gwt.version>2.5.1</gwt.version>
+	</properties>
 	<licenses>
 		<license>
 			<name>Apache License 2.0</name>
