--- a/gwt-integration-editor/pom.xml
+++ b/gwt-integration-editor/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
-			<version>2.5.0</version>
+			<version>${gwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
