--- a/gwt-integration-remote-logging/pom.xml
+++ b/gwt-integration-remote-logging/pom.xml
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
-			<version>2.5.0</version>
+			<version>${gwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
