--- a/gwt-integration-requestfactory/pom.xml
+++ b/gwt-integration-requestfactory/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
-			<version>2.5.0</version>
+			<version>${gwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
