--- a/gwt-integration-jpa/pom.xml
+++ b/gwt-integration-jpa/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>gwt-integration-jpa</artifactId>
-	<name>SampleGWT runtime for the model</name>
-	<description>SampleGWT runtime for the model part</description>
+	<name>GWT Integration - JPA</name>
+	<description>Integrates some aspects of JPA with GWT.</description>
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<version>1.0.0-SNAPSHOT</version>
