--- a/gwt-integration-remote-logging/pom.xml
+++ b/gwt-integration-remote-logging/pom.xml
@@ -37,4 +37,14 @@
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+	</build>
 </project>
