--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.apetrelli.gwtintegration</groupId>
 	<artifactId>gwt-integration</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-alpha3</version>
 	<packaging>pom</packaging>
 	<name>GWT integration</name>
 	<description>Integration of GWT with other technologies and integration of missing parts.</description>
@@ -25,7 +25,7 @@
 		<url>scm:git:https://github.com/apetrelli/gwt-integration</url>
 		<connection>scm:git:git://github.com/apetrelli/gwt-integration.git</connection>
 		<developerConnection>scm:git:https://github.com/apetrelli/gwt-integration.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>gwt-integration-1.0.0-alpha3</tag>
 	</scm>
 	<modules>
 		<module>gwt-integration-jpa</module>
