--- a/gwt-integration-spring-context/pom.xml
+++ b/gwt-integration-spring-context/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-alpha3</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>gwt-integration-spring-context</artifactId>
 	<name>GWT Integration - Spring Context</name>
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-locale</artifactId>
-			<version>1.0.0-alpha3</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
