Integrating editor and request factory on the exception side.

--- a/gwt-integration-editor/pom.xml
+++ b/gwt-integration-editor/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>1.0.0.GA</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.apetrelli.gwtintegration</groupId>
+			<artifactId>gwt-integration-requestfactory</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
