--- a/gwt-integration-spring-security/pom.xml
+++ b/gwt-integration-spring-security/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0-alpha4</version>
 	</parent>
 	<artifactId>gwt-integration-spring-security</artifactId>
 	<name>GWT Integration - Spring Security</name>
@@ -86,12 +86,12 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-requestfactory</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-alpha4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-spring-context</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-alpha4</version>
 		</dependency>
 	</dependencies>
 </project>
