--- a/gwt-integration-hibernate-core/pom.xml
+++ b/gwt-integration-hibernate-core/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-alpha4</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>gwt-integration-hibernate-core</artifactId>
 	<name>GWT Integration - Hibernate Core</name>
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.github.apetrelli.gwtintegration</groupId>
 			<artifactId>gwt-integration-web-deletable</artifactId>
-			<version>1.0.0-alpha4</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
