--- a/gwt-integration-hibernate-entitymanager/pom.xml
+++ b/gwt-integration-hibernate-entitymanager/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.apetrelli.gwtintegration</groupId>
 		<artifactId>gwt-integration</artifactId>
-		<version>1.0.0-alpha4</version>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>gwt-integration-hibernate-entitymanager</artifactId>
 	<name>GWT Integration - Hibernate Entity Manager</name>
